# openquad

./: .gitignore  CITATION.cff  README.md  index.html  pyproject.toml
doc/: Makefile  conf.py  index.rst
doc/_templates/: announcement_banner.html  announcement_contributing.html
doc/_templates/autoapi/python/: module.rst
doc/api/: index.rst  methods.rst
doc/contributing/: communication.rst  contributing.rst  index.rst  structure.rst
doc/using/: about.rst  background.rst  cite.rst  howtos.rst  index.rst  install.rst  intro_package.rst  intro_quadrature.rst  intro_using.rst  quickstart.rst  tutorials.rst
src/: conftest.py
src/openquad/: __init__.py  base.py  fibonacci.py  gauss.py  geometries.py  graef.py  grid.py  karney.py  lebedev.py  monte_carlo.py  newton_cotes.py  womersley.py
src/openquad/data/: __init__.py
src/openquad/data/graef/: __init__.py  s2_design_size1008_degree44.npy  s2_design_size108_degree14.npy  s2_design_size1104_degree46.npy  s2_design_size1200_degree48.npy  s2_design_size120_degree15.npy  s2_design_size1296_degree50.npy  s2_design_size12_degree5.npy  s2_design_size130000_degree500.npy  s2_design_size1404_degree52.npy  s2_design_size144_degree16.npy  s2_design_size1512_degree54.npy  s2_design_size156_degree17.npy  s2_design_size1620_degree56.npy  s2_design_size1740_degree58.npy  s2_design_size180_degree18.npy  s2_design_size1860_degree60.npy  s2_design_size192_degree19.npy  s2_design_size1980_degree62.npy  s2_design_size21000_degree200.npy  s2_design_size2112_degree64.npy  s2_design_size216_degree20.npy  s2_design_size2244_degree66.npy  s2_design_size234_degree21.npy  s2_design_size2376_degree68.npy  s2_design_size24_degree7.npy  s2_design_size2520_degree70.npy  s2_design_size264_degree22.npy  s2_design_size2664_degree72.npy  s2_design_size278_degree23.npy  s2_design_size2808_degree74.npy  s2_design_size2964_degree76.npy  s2_design_size3120_degree78.npy  s2_design_size312_degree24.npy  (+102 more)
tests/: test_Rn_quadrature.py  test_S2_quadrature.py  test_SO3_quadrature.py  test_base.py  test_base_1d_quadrature_methods.py  test_base_2d_quadrature_methods.py  test_base_3d_quadrature_methods.py
v0.1.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.0/_static/: openquad.css
v0.1.0/api/: index.html  methods.html
v0.1.0/contributing/: communication.html  contributing.html  index.html  structure.html
v0.1.0/using/: about.html  background.html  cite.html  howtos.html  index.html  install.html  intro_package.html  intro_quadrature.html  intro_using.html  quickstart.html  tutorials.html
v0.2.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.2.0/api/: index.html  methods.html
v0.2.0/contributing/: communication.html  contributing.html  index.html  structure.html
v0.2.0/using/: about.html  background.html  cite.html  howtos.html  index.html  install.html  intro_package.html  intro_quadrature.html  intro_using.html  quickstart.html  tutorials.html
v0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.0/api/: index.html  methods.html
v0.3.0/contributing/: communication.html  contributing.html  index.html  structure.html
v0.3.0/using/: about.html  background.html  cite.html  howtos.html  index.html  install.html  intro_package.html  intro_quadrature.html  intro_using.html  quickstart.html  tutorials.html
(+454 files in other folders)
